kubernetes/kustomize-example/overlays/mainnet/multichain-0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multichain-mainnet-0
  labels:
    app: multichain-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multichain-0
  template:
    metadata:
      labels:
        app: multichain-0
    spec:
      serviceAccountName: k8s-sa
      containers:
      - name: multichain-0
        image: europe-west1-docker.pkg.dev/near-cs-mainnet/multichain-public/multichain-mainnet:fb9e1c484e483fe946213391a7343c61ff1d4712
        imagePullPolicy: "Always"
        resources:
          limits:
            cpu: 1000m
            memory: 3000Mi
        ports:
        - containerPort: 3000
