kubernetes/kustomize-example/overlays/mainnet/service-mpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: multichain-mainnet-0
spec:
  type: NodePort
  selector:
    app: multichain-0
  ports:
  - name: tcp-port
    protocol: TCP
    port: 3000
    targetPort: 3000
